@@ -528,4 +528,5 @@ BUGFIXES FROM BUGZILLA:
 507 ==> 290931 - Allow to delete items in image viewer.
 508 ==> 221458 - Resizing the geotag window causes crash.
 509 ==> 383707 - BQM renames files (adds «_1») even if renaming is disabled.
-510 ==> 
+510 ==> 384049 - Add an option for group icon-view frame.
+511 ==> 
